bug: fixed padding overlap

--- a/src/styles.css
+++ b/src/styles.css
@@ -34,6 +34,7 @@ li {
   padding: 2rem;
   font-size: 2rem;
   cursor: pointer;
+  margin: 4rem;
 }
 input {
   width: 400px;
